[gd_scene load_steps=5 format=3 uid="uid://game3d_main"]

[ext_resource type="Script" path="res://src/Game3D.gd" id="1_game3d"]
[ext_resource type="Script" path="res://src/dungeon3d/Dungeon3D.gd" id="2_dungeon3d"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.2, 0.3, 0.5, 1)
sky_horizon_color = Color(0.5, 0.6, 0.7, 1)
ground_bottom_color = Color(0.1, 0.1, 0.15, 1)
ground_horizon_color = Color(0.3, 0.3, 0.35, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.45, 0.5, 1)
ambient_light_energy = 0.5
tonemap_mode = 2
ssao_enabled = true
glow_enabled = true
glow_intensity = 0.5

[node name="Game3D" type="Node3D"]
script = ExtResource("1_game3d")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.433, 0.25, 0, 0.5, 0.866, -0.5, -0.75, 0.433, 0, 10, 0)
light_color = Color(1, 0.95, 0.9, 1)
light_energy = 0.5
shadow_enabled = true

[node name="Dungeon3D" type="Node3D" parent="."]
script = ExtResource("2_dungeon3d")

[node name="PlayerContainer" type="Node3D" parent="."]
